--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ PyYAML==6.0.1
 vcgencmd==0.1.1
 pyalsaaudio==0.9.2
 shairport-sync-metadata==0.0.4
+fontawesome-free==5.15.4  # Added for icon support
